file_generator_kepler.ipynb

--- a/file_generator_kepler.ipynb
+++ b/file_generator_kepler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6177cec3-f230-4d7b-bd5d-7406b23f94c6",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 26,
    "id": "07e247f1-78cd-47b2-9182-f80b23eddf3e",
    "metadata": {},
    "outputs": [],
@@ -279,6 +279,26 @@
     "        koi_table = pd.read_csv(self.files_dir+koi_file_name,comment='#')\n",
     "        print('KOI Table Columns, len(koi_table)',koi_table.columns,len(koi_table))\n",
     "        print('kep_conf_list',kep_conf_list)\n",
+    "\n",
+    "        unique_kois = np.unique(koi_table['kepoi_name'])\n",
+    "        n_unq_kois = len(unique_kois)\n",
+    "        print('n_unq_kois',n_unq_kois)\n",
+    "        print('\\033[1;39m All the KOI names are unique in koi_cumulative file \\033[0m')\n",
+    "\n",
+    "        false_pos_kois = koi_table[koi_table['koi_disposition']=='FALSE POSITIVE']\n",
+    "        n_fp_kois = len(false_pos_kois)\n",
+    "        \n",
+    "        candidate_kois = koi_table[koi_table['koi_disposition']=='CANDIDATE']\n",
+    "        n_candidate_kois = len(candidate_kois)\n",
+    "        snr_can_cut = 50.0\n",
+    "        candidate_kois_sel = candidate_kois[candidate_kois['koi_model_snr']>snr_can_cut]\n",
+    "        n_candifdate_sel = len(candidate_kois_sel)\n",
+    "        \n",
+    "\n",
+    "        print('\\033[1;39m Number of False positive in KOI Table \\033[0m',n_fp_kois)\n",
+    "        print('\\033[1;39m Number of candidates in KOI Table \\033[0m',n_candidate_kois)\n",
+    "        print('\\033[1;39m Number of candidates in KOI Table with snr>%s is %s\\033[0m'%(snr_can_cut,\n",
+    "                                                                                       n_candidate_kois))\n",
     "        \n",
     "        idx_temp = np.where(np.isin(koi_table['kepler_name'],kep_conf_list[1:,2]))[0]\n",
     "        macthed_koi_conf_tars = koi_table.iloc[idx_temp]\n",
@@ -355,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "dab2461c-1966-47f3-b528-f2f66406729a",
    "metadata": {},
    "outputs": [],
@@ -365,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 28,
    "id": "c85e1a8e-0c8d-484b-a03e-7aa1818ddcf3",
    "metadata": {},
    "outputs": [
@@ -389,6 +409,11 @@
       " ['kplr011758544' 'K01883.01' 'Kepler-997 b' 'Kepler-997 b']\n",
       " ['kplr011413812' 'K01885.01' 'Kepler-998 b' 'Kepler-998 b']\n",
       " ['kplr009549648' 'K01886.01' 'Kepler-999 b' 'Kepler-999 b']]\n",
+      "n_unq_kois 9564\n",
+      "\u001b[1;39m All the KOI names are unique in koi_cumulative file \u001b[0m\n",
+      "\u001b[1;39m Number of False positive in KOI Table \u001b[0m 4839\n",
+      "\u001b[1;39m Number of candidates in KOI Table \u001b[0m 1980\n",
+      "\u001b[1;39m Number of candidates in KOI Table with snr>50.0 is 1980\u001b[0m\n",
       "Number of sources in kepler confirmed planet list is: 2815\n",
       "Number of confirmed sources found in KOI cumulative table is: 2734\n",
       "Number of sources found in KOI table with kepler name is 2747\n",
