--- a/file_generator_kepler.ipynb
+++ b/file_generator_kepler.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "id": "07e247f1-78cd-47b2-9182-f80b23eddf3e",
    "metadata": {},
    "outputs": [],
@@ -290,15 +290,15 @@
     "        \n",
     "        candidate_kois = koi_table[koi_table['koi_disposition']=='CANDIDATE']\n",
     "        n_candidate_kois = len(candidate_kois)\n",
-    "        snr_can_cut = 50.0\n",
-    "        candidate_kois_sel = candidate_kois[candidate_kois['koi_model_snr']>snr_can_cut]\n",
-    "        n_candifdate_sel = len(candidate_kois_sel)\n",
-    "        \n",
-    "\n",
     "        print('\\033[1;39m Number of False positive in KOI Table \\033[0m',n_fp_kois)\n",
     "        print('\\033[1;39m Number of candidates in KOI Table \\033[0m',n_candidate_kois)\n",
+    "        \n",
+    "        snr_can_cut = 100.0\n",
+    "        candidate_kois_sel = candidate_kois[candidate_kois['koi_model_snr']>snr_can_cut]\n",
+    "        n_candidate_sel = len(candidate_kois_sel)\n",
+    "        print('candidate_kois_sel',candidate_kois_sel)\n",
     "        print('\\033[1;39m Number of candidates in KOI Table with snr>%s is %s\\033[0m'%(snr_can_cut,\n",
-    "                                                                                       n_candidate_kois))\n",
+    "                                                                                       n_candidate_sel))\n",
     "        \n",
     "        idx_temp = np.where(np.isin(koi_table['kepler_name'],kep_conf_list[1:,2]))[0]\n",
     "        macthed_koi_conf_tars = koi_table.iloc[idx_temp]\n",
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "id": "c85e1a8e-0c8d-484b-a03e-7aa1818ddcf3",
    "metadata": {},
    "outputs": [
@@ -413,7 +413,7 @@
       "\u001b[1;39m All the KOI names are unique in koi_cumulative file \u001b[0m\n",
       "\u001b[1;39m Number of False positive in KOI Table \u001b[0m 4839\n",
       "\u001b[1;39m Number of candidates in KOI Table \u001b[0m 1980\n",
-      "\u001b[1;39m Number of candidates in KOI Table with snr>50.0 is 1980\u001b[0m\n",
+      "\u001b[1;39m Number of candidates in KOI Table with snr>100.0 is 1980\u001b[0m\n",
       "Number of sources in kepler confirmed planet list is: 2815\n",
       "Number of confirmed sources found in KOI cumulative table is: 2734\n",
       "Number of sources found in KOI table with kepler name is 2747\n",
