file_generator_kepler.ipynb

--- a/file_generator_kepler.ipynb
+++ b/file_generator_kepler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6177cec3-f230-4d7b-bd5d-7406b23f94c6",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "id": "07e247f1-78cd-47b2-9182-f80b23eddf3e",
    "metadata": {},
    "outputs": [],
@@ -282,22 +282,30 @@
     "\n",
     "        snr_can_cut = 50.0\n",
     "        \n",
+    "        \n",
     "        unique_kois = np.unique(koi_table['kepoi_name'])\n",
     "        n_unq_kois = len(unique_kois)\n",
-    "        unique_kois_snr_cut = unique_kois[unique_kois['koi_model_snr']>snr_can_cut]\n",
-    "        n_unique_sel = len(unique_kois_snr_cut)\n",
     "        print('n_unq_kois',n_unq_kois)\n",
     "        print('\\033[1;39m All the KOI names are unique in koi_cumulative file \\033[0m')\n",
-    "        print('\\033[1;39m Number of unique KOI with snr >%s is %s \\033[0m'%(snr_can_cut,n_unique_sel))\n",
     "        \n",
+    "        \n",
+    "        kois_snr_cut = koi_table[koi_table['koi_model_snr']>snr_can_cut]\n",
+    "        n_koi_sel = len(kois_snr_cut)\n",
+    "        print('\\033[1;39m Number of unique KOI with snr >%s is %s \\033[0m'%(snr_can_cut,n_koi_sel))\n",
     "\n",
+    "        # False positives in KOI Table\n",
     "        false_pos_kois = koi_table[koi_table['koi_disposition']=='FALSE POSITIVE']\n",
     "        n_fp_kois = len(false_pos_kois)\n",
+    "        fp_time_period = false_pos_kois['koi_period']\n",
+    "        print('fp_time_period',fp_time_period)\n",
     "        \n",
+    "        # Candidates in KOI Table\n",
     "        candidate_kois = koi_table[koi_table['koi_disposition']=='CANDIDATE']\n",
     "        n_candidate_kois = len(candidate_kois)\n",
+    "        cand_period = candidate_kois['koi_period']\n",
     "        print('\\033[1;39m Number of False positive in KOI Table \\033[0m',n_fp_kois)\n",
     "        print('\\033[1;39m Number of candidates in KOI Table \\033[0m',n_candidate_kois)\n",
+    "        print()\n",
     "        \n",
     "        \n",
     "        candidate_kois_sel = candidate_kois[candidate_kois['koi_model_snr']>snr_can_cut]\n",
@@ -381,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "dab2461c-1966-47f3-b528-f2f66406729a",
    "metadata": {},
    "outputs": [],
@@ -391,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "id": "c85e1a8e-0c8d-484b-a03e-7aa1818ddcf3",
    "metadata": {},
    "outputs": [
@@ -414,19 +422,38 @@
       " ...\n",
       " ['kplr011758544' 'K01883.01' 'Kepler-997 b' 'Kepler-997 b']\n",
       " ['kplr011413812' 'K01885.01' 'Kepler-998 b' 'Kepler-998 b']\n",
-      " ['kplr009549648' 'K01886.01' 'Kepler-999 b' 'Kepler-999 b']]\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[44], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m kepbuilder\u001b[38;5;241m.\u001b[39mGetKOITable_PlanParams(kep_conf_list\u001b[38;5;241m=\u001b[39mkep_conf_list)\n",
-      "Cell \u001b[0;32mIn[42], line 262\u001b[0m, in \u001b[0;36mExoplanetKeplerFileBuilder.GetKOITable_PlanParams\u001b[0;34m(self, kep_conf_list)\u001b[0m\n\u001b[1;32m    260\u001b[0m unique_kois \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39munique(koi_table[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mkepoi_name\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m    261\u001b[0m n_unq_kois \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(unique_kois)\n\u001b[0;32m--> 262\u001b[0m unique_kois_snr_cut \u001b[38;5;241m=\u001b[39m unique_kois[unique_kois[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mkoi_model_snr\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m>\u001b[39msnr_can_cut]\n\u001b[1;32m    263\u001b[0m n_unique_sel \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(unique_kois_snr_cut)\n\u001b[1;32m    264\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mn_unq_kois\u001b[39m\u001b[38;5;124m'\u001b[39m,n_unq_kois)\n",
-      "\u001b[0;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
+      " ['kplr009549648' 'K01886.01' 'Kepler-999 b' 'Kepler-999 b']]\n",
+      "n_unq_kois 9564\n",
+      "\u001b[1;39m All the KOI names are unique in koi_cumulative file \u001b[0m\n",
+      "\u001b[1;39m Number of unique KOI with snr >50.0 is 2871 \u001b[0m\n",
+      "fp_time_period 3         1.736952\n",
+      "8         7.361790\n",
+      "14       11.521446\n",
+      "15       19.403938\n",
+      "16       19.221389\n",
+      "           ...    \n",
+      "9557    373.893980\n",
+      "9558      8.589871\n",
+      "9559      0.527699\n",
+      "9561      0.681402\n",
+      "9563      4.856035\n",
+      "Name: koi_period, Length: 4839, dtype: float64\n",
+      "\u001b[1;39m Number of False positive in KOI Table \u001b[0m 4839\n",
+      "\u001b[1;39m Number of candidates in KOI Table \u001b[0m 1980\n",
+      "\u001b[1;39m Number of candidates in KOI Table with snr>50.0 is 163\u001b[0m\n",
+      "Number of sources in kepler confirmed planet list is: 2815\n",
+      "Number of confirmed sources found in KOI cumulative table is: 2734\n",
+      "Number of sources found in KOI table with kepler name is 2747\n",
+      "transit_snr_sel 252     1669.1\n",
+      "272     1173.9\n",
+      "728     2486.5\n",
+      "964     3003.8\n",
+      "1173    2833.1\n",
+      "1589    1315.8\n",
+      "Name: koi_model_snr, dtype: float64\n",
+      "6 sources of the paper exist in the macthed_koi_conf_tars list\n",
+      "Number of high SNR(>1000.0) targets in koi tabel is: 37\n",
+      "updated kepid kplr010797460\n"
      ]
     }
    ],
