file_generator_kepler.ipynb

--- a/file_generator_kepler.ipynb
+++ b/file_generator_kepler.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "id": "07e247f1-78cd-47b2-9182-f80b23eddf3e",
    "metadata": {},
    "outputs": [],
@@ -273,26 +273,34 @@
     "        single_plan_list.to_csv(self.files_dir+savefile, index=False)\n",
     "        print('Single planet fils is saved in %s'%savefile_path)\n",
     "\n",
-    "    def GetKOITable_PlanParams(self,kep_conf_list=''):\n",
+    "    def GetKOITable_PlanParams(self,kep_conf_list='',snr_can_cut = 50.0):\n",
     "        \n",
     "        koi_file_name = \"koi_cumulative_2025.06.28_01.24.15.csv\"\n",
     "        koi_table = pd.read_csv(self.files_dir+koi_file_name,comment='#')\n",
-    "        print('KOI Table Columns, len(koi_table)',koi_table.columns,len(koi_table))\n",
+    "        print('KOI Table Columns',koi_table.columns)\n",
+    "        print('\\033[1;39m Total number of objects in KOI Table is %s \\033[0m' %len(koi_table))\n",
     "        print('kep_conf_list',kep_conf_list)\n",
     "\n",
-    "        snr_can_cut = 50.0\n",
-    "        \n",
-    "        \n",
+    "        # number of unique KIC (stars) in KOI Table\n",
+    "        unique_kics = np.unique(koi_table['kepid'])\n",
+    "        n_unq_kics = len(unique_kics)\n",
+    "        print('\\033[1;39m Number of unique KIC is %s\\033[0m'%n_unq_kics)\n",
+    "\n",
+    "        # number of unique koi names in the KOI Table\n",
     "        unique_kois = np.unique(koi_table['kepoi_name'])\n",
     "        n_unq_kois = len(unique_kois)\n",
-    "        print('n_unq_kois',n_unq_kois)\n",
-    "        print('\\033[1;39m All the KOI names are unique in koi_cumulative file \\033[0m')\n",
-    "        \n",
-    "        \n",
+    "        print('\\033[1;39m All the %s KOI names are unique in koi_cumulative file \\033[0m'%n_unq_kois)\n",
+    "\n",
+    "        # number of kois with snr > snr_can_cut\n",
     "        kois_snr_cut = koi_table[koi_table['koi_model_snr']>snr_can_cut]\n",
     "        n_koi_sel = len(kois_snr_cut)\n",
     "        print('\\033[1;39m Number of unique KOI with snr >%s is %s \\033[0m'%(snr_can_cut,n_koi_sel))\n",
     "\n",
+    "        # with single planets:\n",
+    "        kois_single_planet = koi_table[koi_table['koi_count']<=1]\n",
+    "        n_single_planets = len(kois_single_planet)\n",
+    "        print('Number of kois with single planet ',n_single_planets)\n",
+    "        \n",
     "        # False positives in KOI Table\n",
     "        false_pos_kois = koi_table[koi_table['koi_disposition']=='FALSE POSITIVE']\n",
     "        n_fp_kois = len(false_pos_kois)\n",
@@ -305,9 +313,9 @@
     "        cand_period = candidate_kois['koi_period']\n",
     "        print('\\033[1;39m Number of False positive in KOI Table \\033[0m',n_fp_kois)\n",
     "        print('\\033[1;39m Number of candidates in KOI Table \\033[0m',n_candidate_kois)\n",
-    "        print()\n",
+    "        print('cand_period',cand_period)\n",
     "        \n",
-    "        \n",
+    "        # candidates above snr > snr_can_cut\n",
     "        candidate_kois_sel = candidate_kois[candidate_kois['koi_model_snr']>snr_can_cut]\n",
     "        n_candidate_sel = len(candidate_kois_sel)\n",
     "        #print('candidate_kois_sel',candidate_kois_sel)\n",
@@ -334,7 +342,7 @@
     "        #print('matched_sel_conf_tars,len(matched_sel_conf_tars)',matched_sel_conf_tars,len(matched_sel_conf_tars))\n",
     "        transit_snr_sel = matched_sel_conf_tars['koi_model_snr']\n",
     "        \n",
-    "        print('transit_snr_sel',transit_snr_sel)\n",
+    "        print('transit_snr_sel (of 6 sources in Paper)',transit_snr_sel)\n",
     "        print('6 sources of the paper exist in the macthed_koi_conf_tars list')\n",
     "\n",
     "        snr_cut = 1000.0\n",
@@ -399,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "id": "c85e1a8e-0c8d-484b-a03e-7aa1818ddcf3",
    "metadata": {},
    "outputs": [
@@ -407,7 +415,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KOI Table Columns, len(koi_table) Index(['rowid', 'kepid', 'kepoi_name', 'kepler_name', 'koi_disposition',\n",
+      "KOI Table Columns Index(['rowid', 'kepid', 'kepoi_name', 'kepler_name', 'koi_disposition',\n",
       "       'koi_vet_stat', 'koi_vet_date', 'koi_pdisposition', 'koi_score',\n",
       "       'koi_fpflag_nt',\n",
       "       ...\n",
@@ -415,7 +423,8 @@
       "       'koi_dicco_msky_err', 'koi_dikco_mra', 'koi_dikco_mra_err',\n",
       "       'koi_dikco_mdec', 'koi_dikco_mdec_err', 'koi_dikco_msky',\n",
       "       'koi_dikco_msky_err'],\n",
-      "      dtype='object', length=141) 9564\n",
+      "      dtype='object', length=141)\n",
+      "\u001b[1;39m Total number of objects in KOI Table is 9564 \u001b[0m\n",
       "kep_conf_list [['kepid' 'koi_name' 'kepler_name' 'pl_name']\n",
       " ['kplr011446443' 'K00001.01' 'Kepler-1 b' 'TrES-2 b']\n",
       " ['kplr011904151' 'K00072.01' 'Kepler-10 b' 'Kepler-10 b']\n",
@@ -423,9 +432,10 @@
       " ['kplr011758544' 'K01883.01' 'Kepler-997 b' 'Kepler-997 b']\n",
       " ['kplr011413812' 'K01885.01' 'Kepler-998 b' 'Kepler-998 b']\n",
       " ['kplr009549648' 'K01886.01' 'Kepler-999 b' 'Kepler-999 b']]\n",
-      "n_unq_kois 9564\n",
-      "\u001b[1;39m All the KOI names are unique in koi_cumulative file \u001b[0m\n",
+      "\u001b[1;39m Number of unique KIC is 8214\u001b[0m\n",
+      "\u001b[1;39m All the 9564 KOI names are unique in koi_cumulative file \u001b[0m\n",
       "\u001b[1;39m Number of unique KOI with snr >50.0 is 2871 \u001b[0m\n",
+      "Number of kois with single planet  7276\n",
       "fp_time_period 3         1.736952\n",
       "8         7.361790\n",
       "14       11.521446\n",
@@ -440,11 +450,23 @@
       "Name: koi_period, Length: 4839, dtype: float64\n",
       "\u001b[1;39m Number of False positive in KOI Table \u001b[0m 4839\n",
       "\u001b[1;39m Number of candidates in KOI Table \u001b[0m 1980\n",
+      "cand_period 2        19.899140\n",
+      "58       40.419504\n",
+      "62        7.240661\n",
+      "63        3.435916\n",
+      "84       10.181584\n",
+      "           ...    \n",
+      "9538      7.268182\n",
+      "9542    376.379890\n",
+      "9552    367.947848\n",
+      "9560      1.739849\n",
+      "9562    333.486169\n",
+      "Name: koi_period, Length: 1980, dtype: float64\n",
       "\u001b[1;39m Number of candidates in KOI Table with snr>50.0 is 163\u001b[0m\n",
       "Number of sources in kepler confirmed planet list is: 2815\n",
       "Number of confirmed sources found in KOI cumulative table is: 2734\n",
       "Number of sources found in KOI table with kepler name is 2747\n",
-      "transit_snr_sel 252     1669.1\n",
+      "transit_snr_sel (of 6 sources in Paper) 252     1669.1\n",
       "272     1173.9\n",
       "728     2486.5\n",
       "964     3003.8\n",
@@ -458,7 +480,7 @@
     }
    ],
    "source": [
-    "kepbuilder.GetKOITable_PlanParams(kep_conf_list=kep_conf_list);"
+    "kepbuilder.GetKOITable_PlanParams(kep_conf_list=kep_conf_list,snr_can_cut = 50.0);"
    ]
   },
   {
