Made changes to GetKOITable_PlanParams function

--- a/file_generator_kepler.ipynb
+++ b/file_generator_kepler.ipynb
@@ -17,12 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "07e247f1-78cd-47b2-9182-f80b23eddf3e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "class ExoplanetKeplerFileBuilder():\n",
     "\n",
     "    def __init__(self):\n",
@@ -300,12 +299,20 @@
     "        kois_single_planet = koi_table[koi_table['koi_count']<=1]\n",
     "        n_single_planets = len(kois_single_planet)\n",
     "        print('Number of kois with single planet ',n_single_planets)\n",
+    "\n",
+    "        # with single planets and above snr> snr_can_cut\n",
+    "        kois_single_planet_sel = kois_single_planet[kois_single_planet['koi_model_snr']>snr_can_cut]\n",
+    "        n_single_planets_sel = len(kois_single_planet_sel)\n",
     "        \n",
     "        # False positives in KOI Table\n",
     "        false_pos_kois = koi_table[koi_table['koi_disposition']=='FALSE POSITIVE']\n",
     "        n_fp_kois = len(false_pos_kois)\n",
     "        fp_time_period = false_pos_kois['koi_period']\n",
     "        print('fp_time_period',fp_time_period)\n",
+    "\n",
+    "        # False positives above snr> snr_can_cut\n",
+    "        false_pos_kois_sel = false_pos_kois[false_pos_kois['koi_model_snr']>snr_can_cut]\n",
+    "        n_fp_kois_sel = len(false_pos_kois_sel)\n",
     "        \n",
     "        # Candidates in KOI Table\n",
     "        candidate_kois = koi_table[koi_table['koi_disposition']=='CANDIDATE']\n",
@@ -387,10 +394,10 @@
     "        # limb_dark_coeff3 = macthed_koi_conf_tars['koi_ldm_coeff3']\n",
     "        # limb_dark_coeff4 = macthed_koi_conf_tars['koi_ldm_coeff4']\n",
     "        # print('limb_dark_mod',limb_dark_mod)\n",
-    "        return\n",
+    "        return [n_unq_kois, n_candidate_kois , n_fp_kois,n_single_planets], [n_koi_sel, n_candidate_sel, n_fp_kois_sel, n_single_planets_sel]\n",
+    "\n",
     "\n",
     "    \n",
-    "        \n",
     "\n",
     "kepbuilder = ExoplanetKeplerFileBuilder()        "
    ]
