Added confirmed planet calculation

--- a/file_generator_kepler.ipynb
+++ b/file_generator_kepler.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "07e247f1-78cd-47b2-9182-f80b23eddf3e",
    "metadata": {},
    "outputs": [],
@@ -291,17 +291,30 @@
     "        print('\\033[1;39m All the %s KOI names are unique in koi_cumulative file \\033[0m'%n_unq_kois)\n",
     "\n",
     "        # number of kois with snr > snr_can_cut\n",
-    "        kois_snr_cut = koi_table[koi_table['koi_model_snr']>snr_can_cut]\n",
+    "        kois_snr_cut = koi_table[koi_table['koi_model_snr']>=snr_can_cut]\n",
     "        n_koi_sel = len(kois_snr_cut)\n",
     "        print('\\033[1;39m Number of unique KOI with snr >%s is %s \\033[0m'%(snr_can_cut,n_koi_sel))\n",
     "\n",
+    "        # confirmed planets\n",
+    "        conf_planets = koi_table['kepler_name'].replace('', pd.NA).dropna()\n",
+    "        idx_temp = np.where(np.isin(koi_table['kepler_name'],conf_planets))[0]\n",
+    "        conf_planets_kois = koi_table.iloc[idx_temp]\n",
+    "        \n",
+    "        n_conf_plans_kois = len(conf_planets_kois)\n",
+    "        print('\\033[1;39m Number of confirmed planets is %s \\033[0m'%(n_conf_plans_kois))\n",
+    "\n",
+    "        # number of confirmed kois with snr > snr_can_cut\n",
+    "        conf_planets_kois_sel = conf_planets_kois[conf_planets_kois['koi_model_snr']>=snr_can_cut]\n",
+    "        n_conf_plans_kois_sel = len(conf_planets_kois_sel)\n",
+    "        print('\\033[1;39m  Number of confirmed planets with snr >%s is %s \\033[0m'%(snr_can_cut,n_conf_plans_kois_sel))\n",
+    "        \n",
     "        # with single planets:\n",
     "        kois_single_planet = koi_table[koi_table['koi_count']<=1]\n",
     "        n_single_planets = len(kois_single_planet)\n",
     "        print('Number of kois with single planet ',n_single_planets)\n",
     "\n",
     "        # with single planets and above snr> snr_can_cut\n",
-    "        kois_single_planet_sel = kois_single_planet[kois_single_planet['koi_model_snr']>snr_can_cut]\n",
+    "        kois_single_planet_sel = kois_single_planet[kois_single_planet['koi_model_snr']>=snr_can_cut]\n",
     "        n_single_planets_sel = len(kois_single_planet_sel)\n",
     "        \n",
     "        # False positives in KOI Table\n",
@@ -311,7 +324,7 @@
     "        print('fp_time_period',fp_time_period)\n",
     "\n",
     "        # False positives above snr> snr_can_cut\n",
-    "        false_pos_kois_sel = false_pos_kois[false_pos_kois['koi_model_snr']>snr_can_cut]\n",
+    "        false_pos_kois_sel = false_pos_kois[false_pos_kois['koi_model_snr']>=snr_can_cut]\n",
     "        n_fp_kois_sel = len(false_pos_kois_sel)\n",
     "        \n",
     "        # Candidates in KOI Table\n",
@@ -323,7 +336,7 @@
     "        print('cand_period',cand_period)\n",
     "        \n",
     "        # candidates above snr > snr_can_cut\n",
-    "        candidate_kois_sel = candidate_kois[candidate_kois['koi_model_snr']>snr_can_cut]\n",
+    "        candidate_kois_sel = candidate_kois[candidate_kois['koi_model_snr']>=snr_can_cut]\n",
     "        n_candidate_sel = len(candidate_kois_sel)\n",
     "        #print('candidate_kois_sel',candidate_kois_sel)\n",
     "        print('\\033[1;39m Number of candidates in KOI Table with snr>%s is %s\\033[0m'%(snr_can_cut,\n",
@@ -404,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "dab2461c-1966-47f3-b528-f2f66406729a",
    "metadata": {},
    "outputs": [],
@@ -414,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "id": "c85e1a8e-0c8d-484b-a03e-7aa1818ddcf3",
    "metadata": {},
    "outputs": [
@@ -441,7 +454,9 @@
       " ['kplr009549648' 'K01886.01' 'Kepler-999 b' 'Kepler-999 b']]\n",
       "\u001b[1;39m Number of unique KIC is 8214\u001b[0m\n",
       "\u001b[1;39m All the 9564 KOI names are unique in koi_cumulative file \u001b[0m\n",
-      "\u001b[1;39m Number of unique KOI with snr >50.0 is 2871 \u001b[0m\n",
+      "\u001b[1;39m Number of unique KOI with snr >50.0 is 2873 \u001b[0m\n",
+      "\u001b[1;39m Number of confirmed planets is 2747 \u001b[0m\n",
+      "\u001b[1;39m  Number of confirmed planets with snr >50.0 is 711 \u001b[0m\n",
       "Number of kois with single planet  7276\n",
       "fp_time_period 3         1.736952\n",
       "8         7.361790\n",
