Added confirmed planet calculation

--- a/file_generator_kepler.ipynb
+++ b/file_generator_kepler.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "id": "07e247f1-78cd-47b2-9182-f80b23eddf3e",
    "metadata": {},
    "outputs": [],
@@ -407,7 +407,8 @@
     "        # limb_dark_coeff3 = macthed_koi_conf_tars['koi_ldm_coeff3']\n",
     "        # limb_dark_coeff4 = macthed_koi_conf_tars['koi_ldm_coeff4']\n",
     "        # print('limb_dark_mod',limb_dark_mod)\n",
-    "        return [n_unq_kois, n_candidate_kois , n_fp_kois,n_single_planets], [n_koi_sel, n_candidate_sel, n_fp_kois_sel, n_single_planets_sel]\n",
+    "        return [n_unq_kois,n_conf_plans_kois,n_candidate_kois,n_fp_kois,n_single_planets], [\n",
+    "            n_koi_sel, n_conf_plans_kois_sel, n_candidate_sel, n_fp_kois_sel, n_single_planets_sel]\n",
     "\n",
     "\n",
     "    \n",
